<resources>


    <string name="app_name">Habit Tower</string>

    <string name="project_name">COMPS456F project</string>

    <!-- Label for overflow menu option that inserts fake action data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_data">Insert Data</string>

    <!-- Label for overflow menu option that deletes all action data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Actions</string>

    <!-- Title for the activity to go about page [CHAR LIMIT=20] -->
    <string name="about">About</string>

    <!-- Title for the activity to add a new action [CHAR LIMIT=20] -->
    <string name="editor_activity_new_action">Add an Action</string>

    <!-- Label for editor menu option to save action and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current action [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for name of action category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_action">Action</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_action_name">Type your habit</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Details</string>

    <!-- Label for distance information in the editor [CHAR LIMIT=30] -->
    <string name="category_distance">Distance</string>

    <!-- Text hint for distance field in the editor [CHAR LIMIT=30] -->
    <string name="hint_action_distance">How far you went?</string>

    <!-- Units for distance of the action (metres) [CHAR LIMIT=5] -->
    <string name="unit_action_distance">m</string>

    <!-- Label for time information in the editor [CHAR LIMIT=30] -->
    <string name="category_time">Time</string>

    <!-- Text hint for time field in the editor [CHAR LIMIT=30] -->
    <string name="hint_action_time">How many minutes?</string>

    <!-- Units for time of the action (minutes) [CHAR LIMIT=5] -->
    <string name="unit_action_time">min</string>

    <!-- Label for burned energy information in the editor [CHAR LIMIT=30] -->
    <string name="category_calories">Burned Energy</string>

    <!-- Text hint for energy field in the editor [CHAR LIMIT=30] -->
    <string name="hint_action_calories">How many Calories?</string>

    <!-- Units for calories of the action (calories) [CHAR LIMIT=5] -->
    <string name="unit_action_calories">cal</string>

    <string name="logo">LOGO</string>

    <string name="text_home">Home</string>

    <string name="text_insert">Insert data</string>

    <string name="text_reward">Reward</string>

    <string name="text_about">About</string>

    <string name="menu_home">Home</string>

    <string name="menu_calendar">Calendar</string>

    <string name="menu_reward">Reward</string>

    <string name="menu_about">About us</string>

    <string name="member_1_id">Wong Ka Wai 11663046</string>

    <string name="select_all">Select All</string>

    <string name="submit_all">Submit</string>

    <string name="AppName">Habit Tower</string>

</resources>
