<?xml version="1.0" encoding="utf-8"?>

<!---
    * Copyright (C) 2017 The Android Open Source Project
    * This app "You Stay Young" is for people who want to check
    * if their habits are healthy for body and soul
    * Is created with android studio 2.3.1
    * as exercise for Android Basics by Google Nanodegree Program
    * "Habit Tracker " by Dimitra Christina Nikolaidou

    -->
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.android.habitower.EditorActivity">

    <Toolbar
        android:id="@+id/toolbar"
        app:titleTextColor="@color/colorPrimary"
        android:text="Insert Habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     ></Toolbar>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:text="@string/category_action"
            android:textSize="20sp" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_padding_left">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_bodyaction_name"
                style="@style/EditorFieldStyle"
                android:autofillHints="true"
                android:hint="@string/hint_action_name"
                android:inputType="textCapWords"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

    <!-- Measurment category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="39dp"
            android:layout_height="match_parent"

            android:text="@string/category_measurement"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_padding_left">


            <!-- Input fields -->
            <!-- Time field -->
            <LinearLayout
                android:id="@+id/container_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="@dimen/activity_padding_left">

                    <!-- Time field -->

                    <!-- Units for minutes of time (min) -->

                    <EditText
                        android:id="@+id/edit_bodyaction_time"
                        style="@style/EditorFieldStyle"
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_action_time"
                        android:inputType="number"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_time_units"
                        style="@style/EditorUnitsStyle"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_action_time" />

                </RelativeLayout>
            </LinearLayout>
            <!-- Distance field -->
            <LinearLayout
                android:id="@+id/container_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="@dimen/activity_padding_left">

                </RelativeLayout>
            </LinearLayout>
            <!-- Burned Calories field -->



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:text="Interval"
            android:textSize="20sp" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_padding_left">

            <!-- Name field -->
            <Spinner
                android:id="@+id/edit_reset_streak"
                style="@style/EditorFieldStyle"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="true"
                android:entries="@array/reset_streak"
                android:hint="choose one Interval"
                android:textSize="20sp"
                android:inputType="textCapWords"></Spinner>


        </LinearLayout>

    </LinearLayout>



</com.google.android.material.appbar.AppBarLayout>